# grpc-backend

./: .gitignore  README.md  docker-compose.yml  vm_commands.md
backend_python/: Dockerfile  README.md  client.py  dictionary_pb2.py  dictionary_pb2_grpc.py  requirements.txt  server.py
gateway/: Dockerfile  api_gateway.js  dictionary.proto  package-lock.json  package.json
grpc-dictionary-backend/: CMakeLists.txt
grpc-dictionary-backend/src/: dictionary.grpc.pb.cc  dictionary.grpc.pb.h  dictionary.pb.cc  dictionary.pb.h  dictionary_service.cpp  main.cpp
grpc2/: docker-compose.yml
grpc2/api_gateway/: app.js
grpc2/grpc-client/: Dockerfile  client.py
grpc2/grpc-server/: Dockerfile  dictionary.pb.cc  dictionary.pb.h  dictionary.proto  server.cpp
